# iggy

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES.txt  Cargo.toml  MANIFEST.in  README.md  README.rst  build.rs  iggy.py  opt_graph.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: CI copy.yml  CI-copy.yml  CI.yml  ci-test.yml  release.yml
artifical_example_paper/: README.txt  v1_comp_BN.sif
artifical_example_paper/Exp/: depor0_pi3k_mek1_exp.txt
artifical_example_paper/Exp2/: depor0_akt_exp.txt  depor0_pi3k_exp.txt  depor0_pi3k_mek1_exp.txt
artifical_example_paper/prior_data/: first_response_pi3k_down.txt
data/EGF/: EGFNetworkCompressed.cif  EGFNetworkCompressed.sif  EGFNetworkCompressed32.cif  EGFNetworkCompressed32.sif  EGFNetworkCompressed42.cif  EGFNetworkCompressed42.sif  EGFNetworkPreprocessed.cif  EGFNetworkPreprocessed.sif  EGFNetworkRaw.cif  EGFNetworkRaw.sif  EGFdata.txt  EGFinputs.txt  EGFmeasurements.txt
data/Ecoli/: Ecoli_2013.cif  Ecoli_2013.sif  Ecoli_component_compressed.cif  Ecoli_component_compressed.sif  Readme
data/Exp_insilco/: measfile.txt  netfile.cys  netfile.sif  netfile_original.sif  pertfile.txt
data/Liver/: PKN-ExtLiverMSBmodUP.cif  PKN-ExtLiverMSBmodUP.sif  PKN-ExtLiverMSBmodUP_COMPRESSED.cif  PKN-ExtLiverMSBmodUP_COMPRESSED.sif
data/Yeast/: yeast_guelzim.cif  yeast_guelzim.sif  yeast_snf2.obs
data/in_silico_HEK293/: README.md  gold_comp_BN.cif  gold_full_BN.cif  v1_comp_BN.cif  v1_comp_IG.sif
data/in_vivo_HEK293/: README.md  gold_comp_BN.cif  gold_full_BN.cif
data/test/: gold_comp_BN.cif
docs/: index.md
docs/_layouts/: index.html
docs/guide/: guide.html  guide.md  guide.tex  local.bib
iggy-rs/: Cargo.toml
iggy-rs/src/encodings/: add_edges.lp  error_measure.lp  foundedness.lp  fwd_prop.lp  guess_inputs.lp  keep_inputs.lp  min_weighted_repairs.lp  predictions.lp
in_silico_HEK293/: gold_comp_BN.bn
in_silico_HEK293/Exp/: depor0_mek1_exp.txt
in_silico_HEK293/prior_data/: first_response_pi3k_mek1_down.txt
in_vivo_HEK293/: README.txt  gold_comp_BN.sif
in_vivo_HEK293/Wildtype_data/: exp2-5.txt
in_vivo_HEK293/Wt.part+latest/: exp2-7.txt  testreihe3scen1.txt
in_vivo_HEK293/recompVF/: exp3-7.txt  exp4-5.txt  exp4-6.txt  exp4-8.txt  exp4-9.txt  exp5-6.txt  exp5-7.txt  exp5-9.txt  exp7-8.txt  exp8-9.txt
in_vivo_HEK293/recompVF.part/: exp2-4.txt  exp2-6.txt
in_vivo_HEK293/recompWt/: exp2-6.txt  exp4-6.txt  exp4-8.txt  exp4-9.txt  exp5-7.txt  exp5-9.txt
python-module/: .gitignore  Cargo.toml  README.md
python-module/iggy/: __init__.py
python-module/src/: lib.rs
python-module/tests/: unit-tests.py
real_example_Wiebke/: README.txt  gold_comp_IG.sif  gold_full_BN.sif
real_example_Wiebke/Wt.part+latest/: exp2-9.txt
real_example_Wiebke/recompVF/: exp2-3.txt  exp3-5.txt  exp3-6.txt  exp3-8.txt  exp3-9.txt  exp5-8.txt  exp6-7.txt  exp6-8.txt  exp6-9.txt  exp7-9.txt  testreihe2scen2.txt
real_example_Wiebke/recompVF.part/: exp2-5.txt  exp2-8.txt  exp2-9.txt
real_example_Wiebke/recompWt/: exp3-4.txt  exp3-5.txt  exp3-7.txt  exp3-9.txt  exp4-5.txt  exp4-7.txt  exp5-6.txt  exp5-8.txt  exp6-8.txt  exp6-9.txt  exp7-9.txt  exp8-9.txt
real_example_Wiebke/recompWt.part/: exp2-8.txt
src/: __init__.py  bioquali.py  cif_grammar.rustpeg  cif_parser.rs  encodings.rs  graph_parser.py  lib.rs  main.rs  misc.rs  nssif_grammar.rustpeg  nssif_parser.rs  parsers.py  profile_grammar.rustpeg  profile_parser.py  profile_parser.rs  query.py  query.rs  sif_parser.py  tests.rs  utils.py
src/encodings/: add_edges.lp  add_influence.lp  add_influences.lp  auto_inputs.lp  backward_propagation.lp  best_one_edge.lp  best_one_edge_start.lp  bwd_prop.lp  constrained_zero.lp  contradictory_obs.lp  elem_path.lp  elementary_path_constraint.lp  error_measure.lp  flip_edge_directions.lp  flip_edges.lp  forward_propagation.lp  founded_constraints.lp  (+35 more)
(+177 files in other folders)
