[package]
name = "iggy"
version = "2.2.1-dev"
authors = ["Sven Thiele <sthiele78@gmail.com>"]
description = "Influence graph analysis, consistency check, diagnosis, repair and prediction."
readme = "README.md"
documentation = "bioasp.github.io/iggy"
repository = "https://github.com/bioasp/iggy"
publish = false
edition = "2021"

# [features]
# static-linking = ["clingo/static-linking"]

[dependencies]
clingo = { version = "0.7.0", features = ["derive","static-linking"] }
clap = { version = "3.1.17", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
log = "*"
stderrlog = "0.5"
peg = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
