[package]
name = "iggy"
version = "2.2.1-dev"
authors = ["Sven Thiele <sthiele78@gmail.com>"]
description = "Influence graph analysis, consistency check, diagnosis, repair and prediction."
repository = "https://github.com/bioasp/iggy"
publish = false
edition = "2021"

[lib]
name = "iggy"
crate-type = ["rlib"]

# [features]
# static-linking = ["clingo/static-linking"]

[dependencies]
clingo = { version = "0.7.0", features = ["derive","static-linking"] }
clap = { version = "4.3.4", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
itertools = "*"
log = "*"
stderrlog = "*"
peg = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1"
