[package]
name = "iggy-python-module"
version = "2.2.1-dev"
authors = ["Sven Thiele <sthiele78@gmail.com>"]
description = "Influence graph analysis, consistency check, diagnosis, repair and prediction."
documentation = "bioasp.github.io/iggy"
repository = "https://github.com/bioasp/iggy"
publish = false
edition = "2021"

[lib]
name = "iggy"
crate-type = ["cdylib"]

[dependencies]
iggy = { path = "../" }
pyo3 = { version = "0.16.5", features = ["extension-module"] }
